src/test/ui/mir-dataflow/def-inits-1.stderr
error: rustc_peek: bit not set
  --> $DIR/def-inits-1.rs:14:14
   |
LL |     unsafe { rustc_peek(&ret); }
   |              ^^^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/def-inits-1.rs:30:14
   |
LL |     unsafe { rustc_peek(&z); }
   |              ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/def-inits-1.rs:33:14
   |
LL |     unsafe { rustc_peek(&y); }
   |              ^^^^^^^^^^^^^^

error: rustc_peek: bit not set
  --> $DIR/def-inits-1.rs:41:14
   |
LL |     unsafe { rustc_peek(&x); }
   |              ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 5 previous errors

